--- a/index.html
+++ b/index.html
@@ -6,58 +6,86 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-    <div id="main" style="width: 1920px;height:1080px;"></div>
+    <div id="main" style="width:1024px;height:768px;"></div>
 	
 <script type="text/javascript">
+var coordsOffsetMap = {
+    '东北' : [150, 40],
+    '西北' : [150, 40],
+};
+
+var fixAreaCoord = function (geo) {
+    geo.regions.forEach(function (region) {
+        var coordFix = coordsOffsetMap[region.name];
+        if (coordFix) {
+            var cp = region.center;
+            console.log(cp)
+            cp[0] += coordFix[0] / 10.5;
+            cp[1] += coordFix[1] / (10.5 / 0.75);
+        }
+    });
+};
+
 	var myChart = echarts.init(document.getElementById('main'));
 	var beijingDataURL = "https://raw.githubusercontent.com/whb/maplab/master/maps/beijing.json";
+	var chinaDataURL = "https://raw.githubusercontent.com/whb/maplab/master/maps/china-regions.json";
 	$.get(beijingDataURL, function(beijingJson) {
-		echarts.registerMap('北京', beijingJson, {
-			'朝阳区': {left: 118,	top: 40,	width: 1},
-			'南海诸岛': {"left":126,"top":20,"width":10}
-		});
-		myChart.hideLoading();
-		myChart.setOption({
-			 visualMap: {
-					min: 10,
-					max: 50,
-					text:['High','Low'],
-					realtime: false,
-					calculable: true,
-					inRange: {
-						color: ['lightskyblue','yellow', 'orangered']
-					}
-				},
-			series: [{
-				type: 'map',
-				map: '北京',
-				selectedMode:'single',
-				itemStyle:{
-					normal:{
-						label:{
-							show:true
+		$.get(chinaDataURL, function(chinaJson) {
+			var beijingMap = JSON.parse(beijingJson);
+      var chinaMap = JSON.parse(chinaJson);
+      beijingMap.features = beijingMap.features.concat(chinaMap.features);
+
+      //echarts.geoFixFuncs.push(fixAreaCoord);
+			echarts.registerMap('北京', beijingMap, {
+				'朝阳区': {left: 118,	top: 40,	width: 10},
+				'华北': {left: 100,	top: 50,	width: 20},
+				'东北': {left: 120,	top: 50, width: 20},
+				'南海诸岛': {"left":126,"top":20,"width":10}
+			});
+
+			myChart.hideLoading();
+			myChart.setOption({
+				 visualMap: {
+						min: 10,
+						max: 50,
+						text:['High','Low'],
+						realtime: false,
+						calculable: true,
+						inRange: {
+							color: ['lightskyblue','yellow', 'orangered']
 						}
 					},
-					emphasis:{
-						label:{
-							show:true
+				series: [{
+					type: 'map',
+					map: '北京',
+					selectedMode:'single',
+					itemStyle:{
+						normal:{
+							label:{
+								show:true
+							}
+						},
+						emphasis:{
+							label:{
+								show:true
+							}
 						}
-					}
-				},
-				data:[
-					{name: '朝阳区', value: 100},
-					{name: '门头沟区', value: 10},
-					{name: '通州区', value: 20},
-					{name: '昌平区', value: 30},
-					{name: '大兴区', value: 40},
-					{name: '房山区', value: 41},
-					{name: '顺义区', value: 15},
-					{name: '平谷区', value: 25},
-					{name: '密云区', value: 35},
-					{name: '延庆区', value: 35},
-					{name: '怀柔区', value: 45}
-				]
-			}]
+					},
+					data:[
+						{name: '朝阳区', value: 100},
+						{name: '门头沟区', value: 10},
+						{name: '通州区', value: 20},
+						{name: '昌平区', value: 30},
+						{name: '大兴区', value: 40},
+						{name: '房山区', value: 41},
+						{name: '顺义区', value: 15},
+						{name: '平谷区', value: 25},
+						{name: '密云区', value: 35},
+						{name: '延庆区', value: 35},
+						{name: '怀柔区', value: 45}
+					]
+				}]
+			});
 		});
 	});
 
