--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="echarts-4.0.4/echarts.js"></script>
+  <script src="https://raw.githubusercontent.com/whb/maplab/master/echarts-4.0.4/echarts.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
