try export areaCenterCoord

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ var geoCoordMap = {
 
 
 var convertData = function (data) {
-	console.log(echarts.customeAreaCoord)
+		//console.log(chinaWorldArea.customeAreaCenterCoord)
+
     var res = [];
     for (var i = 0; i < data.length; i++) {
         var geoCoord = geoCoordMap[data[i].name];
