--- a/index.html
+++ b/index.html
@@ -12,22 +12,30 @@
 <script type="text/javascript">
 var mapCenter = [116.5, 40];
 
-var data = [
-    {name: '北美', value: 500},
-    {name: '朝阳区', value: 479}
-];
+
+
 var geoCoordMap = {
     '北美':  [150,47],
+    '拉丁美洲': [152, 30],
+    '西欧': [76, 50],
+    '上海': [121.4648,31.2891],
     '朝阳区':[116.5, 40]
 };
+var getCoord = function (name) {
+	return geoCoordMap[name];
+}
 
-
+var data = [
+		{name: '朝阳区', value: 30},
+    {name: '北美', value: 50},
+    {name: '拉丁美洲', value: 40},
+    {name: '西欧', value: 15},
+    {name: '上海', value: 20},
+];
 var convertData = function (data) {
-		//console.log(chinaWorldArea.customeAreaCenterCoord)
-
     var res = [];
     for (var i = 0; i < data.length; i++) {
-        var geoCoord = geoCoordMap[data[i].name];
+        var geoCoord = getCoord(data[i].name);
         if (geoCoord) {
             res.push({
                 name: data[i].name,
@@ -38,12 +46,18 @@ var convertData = function (data) {
     return res;
 };
 
+var lineData = [
+	[{name: '北美'}, {name: '朝阳区'}],
+	[{name: '拉丁美洲'}, {name: '朝阳区'}],
+	[{name: '西欧'}, {name: '朝阳区'}],
+	[{name: '上海'}, {name: '朝阳区'}]
+];
 var convertLineData = function (data) {
     var res = [];
     for (var i = 0; i < data.length; i++) {
         var dataItem = data[i];
-        var fromCoord = geoCoordMap[dataItem[0].name];
-        var toCoord = geoCoordMap[dataItem[1].name];
+        var fromCoord = getCoord(dataItem[0].name);
+        var toCoord = getCoord(dataItem[1].name);
         if (fromCoord && toCoord) {
             res.push({
                 fromName: dataItem[0].name,
@@ -54,8 +68,14 @@ var convertLineData = function (data) {
     }
     return res;
 };
-var lineData = [[{name: '北美'}, {name: '朝阳区'}]];
 
+var mapData = [
+		{name: '朝阳区', value: 10},
+    {name: '北美', value: 30},
+    {name: '拉丁美洲', value: 10},
+    {name: '西欧', value: 45},
+    {name: '上海', value: 50},
+];
 var drawChart = function() {
 		var myChart = echarts.init(document.getElementById('main'));
 		myChart.hideLoading();
@@ -86,19 +106,15 @@ var drawChart = function() {
 				type: 'map',
 				selectedMode:'single',
 				geoIndex: 0,
-				
-				data:[
-					{name: '朝阳区', value: 10},
-				]
+				data: mapData
 			},
-
 			{
           name: 'pm2.5',
           type: 'scatter',
           coordinateSystem: 'geo',
           data: convertData(data),
           symbolSize: function (val) {
-              return val[2] / 10;
+              return val[2];
           },
           label: {
               normal: {
@@ -144,7 +160,10 @@ var drawChart = function() {
 		});
 }
 
-drawChart();
+$(document).ready(function(){
+	drawChart();
+});
+
 </script>
 </body>
 </html>
